tests/NormalTests/paczka1/small_fuzzy/32843071.err
Error in line 5: wAGK5G5 A244 4,9
Error in line 14: ACKVmZSR A244 29,7
